# PolyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
Libraries/: GLFW.lua  Glad.lua  dependencies.lua  (+1 more)
Projects/PolyEditor/: CMakeLists.txt
Projects/PolyEditor/src/: TestLayer.cpp  TestLayer.h  main.cpp  test.h
Projects/PolyEngine/: CMakeLists.txt  premake5.lua
Projects/PolyEngine/PolyEngine/platform/api/opengl/: OpenGLContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h
Projects/PolyEngine/PolyEngine/platform/system/linux/: LinuxWindow.cpp  LinuxWindow.h
Projects/PolyEngine/PolyEngine/platform/system/linux/opengl/: LinuxOpenGLContext.cpp  LinuxOpenGLContext.h
Projects/PolyEngine/PolyEngine/platform/system/windows/: WindowsWindow.cpp  WindowsWindow.h
Projects/PolyEngine/PolyEngine/poly/core/: Application.cpp  Application.h  CoreManager.h  Main.h  Window.cpp  Window.h
Projects/PolyEngine/PolyEngine/poly/events/: Event.h  EventHandler.h  EventNode.cpp  EventNode.h  ExampleEvent.h  TypeInfo.h
Projects/PolyEngine/PolyEngine/poly/input/: CoreInputManager.h  InputDevice.h  Keyboard.h
Projects/PolyEngine/PolyEngine/poly/layers/: Layer.h  LayerStack.cpp  LayerStack.h
Projects/PolyEngine/PolyEngine/poly/log/: Log.h
Projects/PolyEngine/PolyEngine/poly/renderer/: RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h
Projects/PolyEngine/assets/shaders/: example.glsl
Projects/PolyEngine/src/events/: EventHandler.h  EventNode.h
Projects/PolyEngine/src/platform/api/gl/: GLBuffer.cpp  GLBuffer.h  GLRenderBackend.cpp  GLRenderBackend.h  GLRenderCommand.cpp  GLRenderCommand.h
Projects/PolyEngine/src/platform/api/opengl/: OpenGLContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h
Projects/PolyEngine/src/platform/system/linux/: LinuxWindow.cpp  LinuxWindow.h
Projects/PolyEngine/src/platform/system/windows/: WindowsWindow.cpp  WindowsWindow.h
Projects/PolyEngine/src/poly/core/: Application.cpp  Application.h  CoreManager.h  Layer.h  LayerStack.cpp  LayerStack.h  Main.h  Window.cpp  Window.h
Projects/PolyEngine/src/poly/event/: Event.h
Projects/PolyEngine/src/poly/events/: Event.cpp  Event.h  EventListener.h  EventNode.cpp  EventNode.h  EventNodeBase.cpp  EventNodeBase.h  EventQueue.cpp  EventQueue.h  ExampleEvent.h  TypeInfo.h
Projects/PolyEngine/src/poly/events/window/: WindowCloseEvent.h
Projects/PolyEngine/src/poly/input/: CoreInputManager.h  InputDevice.h
Projects/PolyEngine/src/poly/layers/: Layer.h  LayerStack.cpp  LayerStack.h
Projects/PolyEngine/src/poly/log/: Log.h
Projects/PolyEngine/src/poly/render/: API.h  Buffer.cpp  Buffer.h  RenderBackend.cpp  RenderBackend.h  RenderCommand.cpp  RenderCommand.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h
Projects/PolyEngine/src/poly/render/geometry/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Projects/PolyEngine/src/poly/render/material/: Material.h
Projects/PolyEngine/src/poly/render/shader/: Shader.cpp  Shader.h  ShaderType.h
Projects/PolyEngine/src/poly/renderer/: RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h
Projects/PolyEngine/src/poly/systems/: Registry.cpp  Registry.h  RegistryData.cpp  RegistryData.h
Projects/PolyEngine/src/poly/util/: Log.h  NamespaceID.cpp  NamespaceID.h  NamespaceId.cpp  NamespaceId.h  Ref.h  TypeInfo.h
(+33 files in other folders)
